--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                 <p class="puntaje fw-bold text-secondary me-2">
                                     4.7
                                 </p>
-                                <img class="me-2" src="build/img/estrellas.png" alt="calificacion estrellas">
+                                <img class="me-2 calificacion" src="build/img/estrellas.png" alt="calificacion estrellas">
                                 <p class="total m-0">(3121)</p>
                             </div>
                             <p class="precio fw-bold">10 USD$ <span class="original fw-normal">200USD$</span></p>                   
@@ -95,20 +95,19 @@
                     <div class="card">
                         <img src="build/img/curso_2.jpg" alt="imagen curso" class="card-img-top">
                         <div class="card-body">
-                            <h4 class="titulo">Diseño UX, UI con Fignma</h4>
+                            <h4 class="titulo">Diseño UX, UI con Fignma - 5 apps</h4>
                             <p class="instructor">Jose Peréz instructor</p>
                             <div class="d-flex align-items-center">
                                 <p class="puntaje fw-bold text-secondary me-2">
                                     4.7
                                 </p>
-                                <img class="me-2" src="build/img/estrellas.png" alt="calificacion estrellas">
+                                <img class="me-2 calificacion" src="build/img/estrellas.png" alt="calificacion estrellas">
                                 <p class="total m-0">(3121)</p>
                             </div>
                             <p class="precio fw-bold">10 USD$ <span class="original fw-normal">200USD$</span></p>                   
                         </div>
                     </div>    
                 </li>
-
                 <li class="curso">
                     <div class="card">
                         <img src="build/img/curso_10.jpg" alt="imagen curso" class="card-img-top">
@@ -155,7 +154,7 @@
                                 <p class="puntaje fw-bold text-secondary me-2">
                                     4.7
                                 </p>
-                                <img class="me-2" src="build/img/estrellas.png" alt="calificacion estrellas">
+                                <img class="me-2 calificacion" src="build/img/estrellas.png" alt="calificacion estrellas">
                                 <p class="total m-0">(3121)</p>
                             </div>
                             <p class="precio fw-bold">10 USD$ <span class="original fw-normal">200USD$</span></p>                   
@@ -173,7 +172,7 @@
                                 <p class="puntaje fw-bold text-secondary me-2">
                                     4.7
                                 </p>
-                                <img class="me-2" src="build/img/estrellas.png" alt="calificacion estrellas">
+                                <img class="me-2 calificacion" src="build/img/estrellas.png" alt="calificacion estrellas">
                                 <p class="total m-0">(3121)</p>
                             </div>
                             <p class="precio fw-bold">10 USD$ <span class="original fw-normal">200USD$</span></p>                   
@@ -181,6 +180,328 @@
                     </div>    
                 </li>
             </ul>
+        </div>
+    </section>
+
+    <section class="bg-light my-5 py-5">
+        <div class="container-xl">
+            <div class="row justify-content-between align-items-center">
+                <div class="col-md-3 mb-5 mb-md-0">
+                    <div class="d-flex justify-content-around align-items-center">
+                        <div class="me-3">
+                            <div class="icono">
+                                <i class="bi bi-play-fill fs-3"></i>
+                            </div>
+                        </div>
+                        <p>Aprende habilidades a tu ritmo con 
+                           todos nuestros cursos en video.
+                        </p>
+                    </div>
+                </div> <!--Col md 3-->
+                <div class="col-md-3 mb-5 mb-md-0">
+                    <div class="d-flex justify-content-around align-items-center">
+                        <div class="me-3">
+                            <div class="icono">
+                                <i class="bi bi-star-fill fs-3"></i>
+                            </div>
+                        </div>
+                        <p>Compra cursos impartidos por expertos verficados 
+                            y obten un empleo.
+                        </p>
+                    </div>
+                </div> <!--Col md 3-->
+                <div class="col-md-3 mb-5 mb-md-0">
+                    <div class="d-flex justify-content-around align-items-center">
+                        <div class="me-3">
+                            <div class="icono">
+                                <i class="bi bi-phone-fill fs-3"></i>
+                            </div>
+                        </div>
+                        <p>Aprende a tu ritmo, con acceso de por vida desde cualquier dispositivo
+                        </p>
+                    </div>
+                </div> <!--Col md 3-->
+            </div>
+        </div>
+    </section>
+
+    <section class="container-xl">
+        <p class="fs-4 fw-bold">Los estudiantes están viendo</p>
+        <ul class="list-unstyled mt-5 listado-cursos">
+            <li class="curso">
+                <div class="card">
+                    <img src="build/img/curso_1.jpg" alt="imagen curso" class="card-img-top">
+                    <div class="card-body">
+                        <h4 class="titulo">Curso de guitarra - principios básicos</h4>
+                        <p class="instructor">Jose Peréz instructor</p>
+                        <div class="d-flex align-items-center">
+                            <p class="puntaje fw-bold text-secondary me-2">
+                                4.7
+                            </p>
+                            <img class="me-2 calificacion" src="build/img/estrellas.png" alt="calificacion estrellas">
+                            <p class="total m-0">(3121)</p>
+                        </div>
+                        <p class="precio fw-bold">10 USD$ <span class="original fw-normal">200USD$</span></p>                   
+                    </div>
+                </div>    
+            </li>
+            <li class="curso">
+                <div class="card">
+                    <img src="build/img/curso_4.jpg" alt="imagen curso" class="card-img-top">
+                    <div class="card-body">
+                        <h4 class="titulo">Fotografía para principiantes - primeros pasos</h4>
+                        <p class="instructor">Jose Peréz instructor</p>
+                        <div class="d-flex align-items-center">
+                            <p class="puntaje fw-bold text-secondary me-2">
+                                4.7
+                            </p>
+                            <img class="me-2 calificacion" src="build/img/estrellas.png" alt="calificacion estrellas">
+                            <p class="total m-0">(3121)</p>
+                        </div>
+                        <p class="precio fw-bold">10 USD$ <span class="original fw-normal">200USD$</span></p>                   
+                    </div>
+                </div>    
+            </li>
+            <li class="curso">
+                <div class="card">
+                    <img src="build/img/curso_5.jpg" alt="imagen curso" class="card-img-top">
+                    <div class="card-body">
+                        <h4 class="titulo">Curso de ventas en redes</h4>
+                        <p class="instructor">Jose Peréz instructor</p>
+                        <div class="d-flex align-items-center">
+                            <p class="puntaje fw-bold text-secondary me-2">
+                                4.7
+                            </p>
+                            <img class="me-2 calificacion" src="build/img/estrellas.png" alt="calificacion estrellas">
+                            <p class="total m-0">(3121)</p>
+                        </div>
+                        <p class="precio fw-bold">10 USD$ <span class="original fw-normal">200USD$</span></p>                   
+                    </div>
+                </div>    
+            </li>
+
+            <li class="curso">
+                <div class="card">
+                    <img src="build/img/curso_7.jpg" alt="imagen curso" class="card-img-top">
+                    <div class="card-body">
+                        <h4 class="titulo">Fundamentos basicos de dsieño UX/UI</h4>
+                        <p class="instructor">Jose Peréz instructor</p>
+                        <div class="d-flex align-items-center">
+                            <p class="puntaje fw-bold text-secondary me-2">
+                                4.7
+                            </p>
+                            <img class="me-2 calificacion" src="build/img/estrellas.png" alt="calificacion estrellas">
+                            <p class="total m-0">(3121)</p>
+                        </div>
+                        <p class="precio fw-bold">10 USD$ <span class="original fw-normal">200USD$</span></p>                   
+                    </div>
+                </div>    
+            </li>
+
+            <li class="curso">
+                <div class="card">
+                    <img src="build/img/curso_8.jpg" alt="imagen curso" class="card-img-top">
+                    <div class="card-body">
+                        <h4 class="titulo">Diseño de tiendas virtuales con WooCommerce</h4>
+                        <p class="instructor">Jose Peréz instructor</p>
+                        <div class="d-flex align-items-center">
+                            <p class="puntaje fw-bold text-secondary me-2">
+                                4.7
+                            </p>
+                            <img class="me-2 calificacion" src="build/img/estrellas.png" alt="calificacion estrellas">
+                            <p class="total m-0">(3121)</p>
+                        </div>
+                        <p class="precio fw-bold">10 USD$ <span class="original fw-normal">200USD$</span></p>                   
+                    </div>
+                </div>    
+            </li>
+
+            <li class="curso d-lg-none">
+                <div class="card">
+                    <img src="build/img/curso_12.jpg" alt="imagen curso" class="card-img-top">
+                    <div class="card-body">
+                        <h4 class="titulo">Bootcamp Backend - Ruby on rails, Django y Laravel</h4>
+                        <p class="instructor">Jose Peréz instructor</p>
+                        <div class="d-flex align-items-center">
+                            <p class="puntaje fw-bold text-secondary me-2">
+                                4.7
+                            </p>
+                            <img class="me-2 calificacion" src="build/img/estrellas.png" alt="calificacion estrellas">
+                            <p class="total m-0">(3121)</p>
+                        </div>
+                        <p class="precio fw-bold">10 USD$ <span class="original fw-normal">200USD$</span></p>                   
+                    </div>
+                </div>    
+            </li>
+        </ul>
+    </section>
+
+    <section class="container-xl categorias mt-3">
+        <p class="fs-4 fw-bold">Categorías principales</p>
+
+        <ul class="list-unstyled grid">
+            <li class="g-col-6 g-col-md-4 g-col-lg-3">
+                <a href="#" class="text-decoration-none">
+                    <div class="bg-light">
+                        <img class="img-fluid" src="build/img/iconos-01.png" alt="imagen icono">
+                    </div>
+                    <p class="fw-bold mt-2">Diseño</p>
+                </a>       
+            </li>
+            <li class="g-col-6 g-col-md-4 g-col-lg-3">
+                <a href="#" class="text-decoration-none">
+                    <div class="bg-light">
+                        <img class="img-fluid" src="build/img/iconos-02.png" alt="imagen icono">
+                    </div>
+                    <p class="fw-bold mt-2">Diseño</p>
+                </a>
+            </li>
+            <li class="g-col-6 g-col-md-4 g-col-lg-3">
+                <a href="#" class="text-decoration-none">
+                    <div class="bg-light">
+                        <img class="img-fluid" src="build/img/iconos-03.png" alt="imagen icono">
+                    </div>
+                    <p class="fw-bold mt-2">Marketing</p>
+                </a>
+            </li>
+            <li class="g-col-6 g-col-md-4 g-col-lg-3">
+                <a href="#" class="text-decoration-none">
+                    <div class="bg-light">
+                        <img class="img-fluid" src="build/img/iconos-04.png" alt="imagen icono">
+                    </div>
+                    <p class="fw-bold mt-2">Informática y software</p>
+                </a>
+            </li>
+            <li class="g-col-6 g-col-md-4 g-col-lg-3">
+                <a href="#" class="text-decoration-none">
+                    <div class="bg-light">
+                        <img class="img-fluid" src="build/img/iconos-05.png" alt="imagen icono">
+                    </div>
+                    <p class="fw-bold mt-2">Desarrollo personal</p>
+                </a>
+            </li>
+            <li class="g-col-6 g-col-md-4 g-col-lg-3">
+                <a href="#" class="text-decoration-none">
+                    <div class="bg-light">
+                        <img class="img-fluid" src="build/img/iconos-06.png" alt="imagen icono">
+                    </div>
+                    <p class="fw-bold mt-2">Negocios</p>
+                </a>
+            </li>
+            <li class="g-col-6 g-col-md-4 g-col-lg-3">
+                <a href="#" class="text-decoration-none">
+                    <div class="bg-light">
+                        <img class="img-fluid" src="build/img/iconos-07.png" alt="imagen icono">
+                    </div>
+                    <p class="fw-bold mt-2">Fotografía</p>
+                </a>
+            </li>
+            <li class="g-col-6 g-col-md-4 g-col-lg-3">
+                <a href="#" class="text-decoration-none">
+                    <div class="bg-light">
+                        <img class="img-fluid" src="build/img/iconos-08.png" alt="imagen icono">
+                    </div>
+                    <p class="fw-bold mt-2">Música</p>
+                </a>
+            </li>
+        </ul>
+    </section>
+    
+    <section class="listanto-categorias py-5 mt-5 bg-light">
+        <div class="container-xl">
+            <p class="fs-3 fw-bold">Temas por categoría</p>
+
+            <div class="row">
+                <div class="col-12 col-sm-6 col-md-3">
+                    <p class="fw-bold fs-4">Desarrollo</p>
+
+                    <ul class="list-unstyled">
+                        <li class="mb-4">
+                            <a href="#" class="text-success fw-bold fs-5">Python</a>
+                            <p>30 000 000 de Estudiantes</p>
+                        </li>
+                        <li class="mb-4">
+                            <a href="#" class="text-success fw-bold fs-5">Desarrollo web</a>
+                            <p>10 000 000 de Estudiantes</p>
+                        </li>
+                        <li class="mb-4">
+                            <a href="#" class="text-success fw-bold fs-5">Machine learning</a>
+                            <p>6 000 000 de Estudiantes</p>
+                        </li>
+                    </ul>
+                </div> <!--Columnas-->
+
+                <div class="col-12 col-sm-6 col-md-3">
+                    <p class="fw-bold fs-4">Negocios</p>
+
+                    <ul class="list-unstyled">
+                        <li class="mb-4">
+                            <a href="#" class="text-success fw-bold fs-5">Analisís financiero</a>
+                            <p>1 000 000 de Estudiantes</p>
+                        </li>
+                        <li class="mb-4">
+                            <a href="#" class="text-success fw-bold fs-5">SQl</a>
+                            <p>6 000 000 de Estudiantes</p>
+                        </li>
+                        <li class="mb-4">
+                            <a href="#" class="text-success fw-bold fs-5">PMP</a>
+                            <p>1 000 000 de Estudiantes</p>
+                        </li>
+                    </ul>
+                </div> <!--Columnas-->
+
+                <div class="col-12 col-sm-6 col-md-3">
+                    <p class="fw-bold fs-4">Informática y software</p>
+
+                    <ul class="list-unstyled">
+                        <li class="mb-4">
+                            <a href="#" class="text-success fw-bold fs-5">Certificación AWS</a>
+                            <p>4 000 000 de Estudiantes</p>
+                        </li>
+                        <li class="mb-4">
+                            <a href="#" class="text-success fw-bold fs-5">Hacking ético</a>
+                            <p>10 000 000 de Estudiantes</p>
+                        </li>
+                        <li class="mb-4">
+                            <a href="#" class="text-success fw-bold fs-5">Seguiridad Informática</a>
+                            <p>4 000 000 de Estudiantes</p>
+                        </li>
+                    </ul>
+                </div> <!--Columnas-->
+
+                <div class="col-12 col-sm-6 col-md-3">
+                    <p class="fw-bold fs-4">Diseño</p>
+
+                    <ul class="list-unstyled">
+                        <li class="mb-4">
+                            <a href="#" class="text-success fw-bold fs-5">Photoshop</a>
+                            <p>10 000 000 de Estudiantes</p>
+                        </li>
+                        <li class="mb-4">
+                            <a href="#" class="text-success fw-bold fs-5">Diseño Gráfico</a>
+                            <p>3 000 000 de Estudiantes</p>
+                        </li>
+                        <li class="mb-4">
+                            <a href="#" class="text-success fw-bold fs-5">Dibujo</a>
+                            <p>2 000 000 de Estudiantes</p>
+                        </li>
+                    </ul>
+                </div> <!--Columnas-->
+            </div>
+            <a href="#" class="btn btn-outline-dark">Explora más temas</a>
+        </div>
+    </section>
+
+    <section class="container-xl py-3 ">
+        <div class="row justify-content-center align-items-center">
+            <div class="col-md-5 order-2 order-md-1">
+                <img class="img-fluid" src="build/img/persona2.png" alt="imagen instructora">
+            </div>
+            <div class="col-md-5 order-1 order-md-2">
+                <h2>Conviertete en instructor</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio assumenda dignissimos quaerat cupiditate nostrum, modi nemo vero quidem recusandae. Qui ut similique reprehenderit et non cumque, aspernatur dolores facere officiis.</p>
+                <a class="btn btn-dark" href="#">Empieza a enseñar hoy mismo</a>
+            </div>
         </div>
     </section>
 </body>
