--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Kaisei+HarunoUmi:wght@400;700&family=Open+Sans&display=swap"
         rel="stylesheet" />
-    <link rel="stylesheet" href="build/css/app.css" />
+    <link rel="stylesheet" href="build/css/app.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
 </head>
 
@@ -504,6 +504,100 @@
             </div>
         </div>
     </section>
+
+    <section class="bg-light py-5">
+        <div class="container-xl">
+            <div class="row justify-content-center">
+                <div class="col-md8">
+                    <h4 class="text-center">
+                        Empresas de todos los tamaños confían en nostros
+                    </h4>
+                    <div class="logos">
+                        <div class="logo d-flex justify-content-center">
+                            <img src="build/img/logo-01.svg" alt="imagen-logo">
+                        </div>
+                        <div class="logo d-flex justify-content-center">
+                            <img src="build/img/logo-02.svg" alt="imagen-logo">
+                        </div>
+                        <div class="logo d-flex justify-content-center">
+                            <img src="build/img/logo-03.svg" alt="imagen-logo">
+                        </div>
+                        <div class="logo d-flex justify-content-center">
+                            <img src="build/img/logo-04.svg" alt="imagen-logo">
+                        </div>
+                        <div class="logo d-flex justify-content-center">
+                            <img src="build/img/logo-05.svg" alt="imagen-logo">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="container-xl py-5">
+        <div class="row justify-content-center align-items-center">
+            <div class="col-md-5">
+                <h2>Universidad <span class="text-success">business</span></h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam labore, aliquid molestiae voluptatem vero dolores quod a molestias quasi nam similique at accusantium eius sint unde distinctio nobis iste! Odit.</p>
+                <a href="#" class="btn btn-dark">Consigue U business</a>
+            </div>
+            <div class="col-md-5">
+                <img class="img-fluid" src="build/img/persona3.png" alt="imagen persona udemy for business">
+            </div>
+        </div>
+    </section>
+
+    <section class="container-xl py-5">
+        <div class="row justify-content-center align-items-center">
+            <div class="row">
+                <div class="col-md-5 order-md-1 order-2">
+                    <img class="img-fluid" alt="imagen de personas" src="build/img/transforma.png">
+                </div>
+                <div class="col-md-5 order-md-1 order-1 mb-4 mb-md-0">
+                    <h2 class="fs-3">Transforma tu vida mediante la educacion</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod, unde tenetur fugiat nihil, distinctio eos sunt dolorem doloremque commodi magni possimus. Possimus quae quis soluta laboriosam blanditiis at ipsam nesciunt?</p>
+                    <a href="#" class="btn btn-dark">Descubre cómo</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="bg-dark py-5">
+        <div class="container-xl">
+            <div class="row align-items-start">
+                <nav class="col-md-2 d-grid gap-2">
+                    <a href="#" class="text-light text-decoration-none">U business</a>
+                    <a href="#" class="text-light text-decoration-none">Enseña en U</a>
+                    <a href="#" class="text-light text-decoration-none">Consigue la app</a>
+                    <a href="#" class="text-light text-decoration-none">¿Quienes somos?</a>
+                    <a href="#" class="text-light text-decoration-none">Contacto</a>
+                </nav>
+
+                <nav class="col-md-2 d-grid gap-2">
+                    <a href="#" class="text-light text-decoration-none">Empleo</a>
+                    <a href="#" class="text-light text-decoration-none">Blog U</a>
+                    <a href="#" class="text-light text-decoration-none">Ayuda y asistencia</a>
+                    <a href="#" class="text-light text-decoration-none">Afiliado</a>
+                </nav>
+
+                <nav class="col-md-2 d-grid gap-2 me-auto">
+                    <a href="#" class="text-light text-decoration-none">Condiciones</a>
+                    <a href="#" class="text-light text-decoration-none">Política y privacidad</a>
+                    <a href="#" class="text-light text-decoration-none">Mapa del sitio</a>
+                </nav>
+
+                <div class="col-md-2">
+                    <a href="#" class="btn btn-outline-light">Español</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-xl mt-5 d-flex justify-content-between">
+            <p class="text-light fs-3 fw-bold"><span class="text-success">U</span>niversidad</p>
+            <p class="text-light">&copy; U, inc.</p>
+        </div>
+        
+    </footer>
 </body>
 
 </html>
